--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">
+    <!-- Primary Meta Tags -->
     <title>Phoenix Reid</title>
+    <meta name="title" content="Phoenix Reid">
+    <meta name="description" content="Full Stack Web Developer (Jnr. C++, JS, Python Developer) and Network Engineer">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://phoenixreid.tech/">
+    <meta property="og:title" content="Phoenix Reid">
+    <meta property="og:description" content="Full Stack Web Developer (Jnr. C++, JS, Python Developer) and Network Engineer">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://phoenixreid.tech/">
+    <meta property="twitter:title" content="Phoenix Reid">
+    <meta property="twitter:description" content="Full Stack Web Developer (Jnr. C++, JS, Python Developer) and Network Engineer">
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
