--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
     <script src="https://unpkg.com/vue-router@2.0.0/dist/vue-router.js"></script>
     <!-- Main Js file -->
     <script src="/js/main.js"></script>
+    <script>
+        $(window).scroll(function(event) {
+            function projectsBar() {
+                var scroll = $(window).scrollTop();
+                if (scroll > 2200 && scroll < 2800) {
+                    $(".skills_projects_link").fadeIn("slow").addClass("show");
+                } else {
+                    $(".skills_projects_link").fadeOut("slow").removeClass("show");
+                }
+            }
+            projectsBar();
+        });
+    </script>
 </body>
 
 </html>
